<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--    global action-->
    <action
        android:id="@+id/action_global_BottomNavFragment"
        app:destination="@id/nav_home" />

    <!--    Inside a bottom navigation in this fragment-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.navigationdrawer.fragments.BottomNavigationFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_bottom_navigation" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.navigationdrawer.fragments.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_group"
        android:name="com.navigationdrawer.fragments.GroupFragment"
        android:label="@string/group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.navigationdrawer.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>