<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_mobile_navigation"
    app:startDestination="@+id/nav_bottom_home">

    <fragment
        android:id="@+id/nav_bottom_home"
        android:name="com.navigationdrawer.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <!--        navigate to a desination-->
        <action
            android:id="@+id/homeToMessage"
            app:destination="@+id/nav_bottom_message" />

    </fragment>

    <fragment
        android:id="@+id/nav_bottom_message"
        android:name="com.navigationdrawer.fragments.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message">

        <!--        navigate to a desination-->
        <action
            android:id="@+id/messageToProfile"
            app:destination="@+id/nav_bottom_profile" />

    </fragment>

    <fragment
        android:id="@+id/nav_bottom_profile"
        android:name="com.navigationdrawer.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>